--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: Head;
     src: url(./Heading-Now-Variable.ttf);
 }
+@font-face {
+    font-family: Monument;
+    src: url(./MonumentExtended-Regular.otf);
+}
 
 *{
     margin: 0;
@@ -15,6 +19,21 @@ html,body{
 #main{
     height: 100%;
     width: 100%;
+}
+#loader{
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(132, 156, 228);
+    position: fixed;
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#loader>h1{
+    font-size: 100px;
+    font-family: Monument;
+    font-weight: 100;
 }
 #page1{
     height: 100vh;
